--- a/wp-content/themes/twentytwenty/css/base.css
+++ b/wp-content/themes/twentytwenty/css/base.css
@@ -2647,6 +2647,9 @@ body.popup-open {
   @media only screen and (max-width: 1024px) {
     .popup {
       width: 89%; } }
+  @media only screen and (min-width: 1300px) {
+    .popup {
+      max-height: 700px; } }
   .popup .popup-img {
     background-repeat: no-repeat;
     background-size: cover;
@@ -2749,7 +2752,8 @@ body.popup-open {
             width: 10px; } }
     .popup .popup-body .l-col {
       width: 450px;
-      height: 100%; }
+      height: 100%;
+      background-repeat: no-repeat; }
       @media only screen and (max-width: 1024px) {
         .popup .popup-body .l-col {
           width: unset;
