--- a/wp-content/themes/twentytwenty/css/base-partial/atoms/_reset-and-normalize.scss
+++ b/wp-content/themes/twentytwenty/css/base-partial/atoms/_reset-and-normalize.scss
@@ -496,10 +496,10 @@ html {
   scroll-behavior: smooth;
 }
 
-*::-webkit-scrollbar {
-  display: none;
-}
+// *::-webkit-scrollbar {
+//   display: none;
+// }
 *{
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
+  // -ms-overflow-style: none;  /* IE and Edge */
+  // scrollbar-width: none;  /* Firefox */
 }
