--- a/wp-content/themes/twentytwenty/css/base.css
+++ b/wp-content/themes/twentytwenty/css/base.css
@@ -389,6 +389,15 @@ optgroup {
 html {
   scroll-behavior: smooth; }
 
+*::-webkit-scrollbar {
+  display: none; }
+
+* {
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */ }
+
 .g-cols:before,
 .g-cols:after {
   display: table;
@@ -1282,11 +1291,12 @@ small {
       font-weight: 700;
       line-height: 12px;
       letter-spacing: 0em;
-      color: #0C4D43;
+      color: #847367;
       text-transform: uppercase;
       padding: 0px 12px; }
       .top-links ul a:hover, .top-links ul a.active {
-        opacity: 0.6;
+        color: #0C4D43;
+        text-decoration: underline;
         cursor: pointer; }
       .top-links ul a.active {
         cursor: default; }
@@ -2449,11 +2459,9 @@ body.popup-open {
         display: none; } }
 
 @media only screen and (max-width: 1024px) {
-  .team-item {
-    width: 200px; }
-    .team-item img {
-      width: 200px !important;
-      margin: 0 auto; } }
+  .team-item img {
+    width: 200px !important;
+    margin: 0 auto; } }
 
 @media only screen and (max-width: 1024px) {
   .team-wrapper {
