--- a/wp-content/themes/twentytwenty/css/base.css
+++ b/wp-content/themes/twentytwenty/css/base.css
@@ -596,9 +596,7 @@ h2 {
     h2 {
       font-size: 22px;
       line-height: 28px;
-      margin-bottom: 15px; }
-      h2 br {
-        display: none; } }
+      margin-bottom: 15px; } }
 
 h3 {
   font-family: 'Playfair Display', sans-serif;
@@ -956,6 +954,18 @@ small {
   color: #2B3144;
   margin-bottom: 20px;
   letter-spacing: -0.13px; }
+
+.desktop {
+  display: block; }
+  @media only screen and (max-width: 1024px) {
+    .desktop {
+      display: none; } }
+
+.mobile {
+  display: none; }
+  @media only screen and (max-width: 1024px) {
+    .mobile {
+      display: block; } }
 
 .btn {
   font-weight: 500;
