--- a/wp-content/themes/twentytwenty/css/base.css
+++ b/wp-content/themes/twentytwenty/css/base.css
@@ -2904,7 +2904,8 @@ body.popup-open {
   border-bottom: 1px solid #d0d0d0; }
   @media only screen and (max-width: 1024px) {
     .bdr-bt {
-      display: none; } }
+      border-bottom: 0;
+      padding-bottom: 15px; } }
 
 .link-head {
   font-size: 22px;
