--- a/wp-content/themes/twentytwenty/css/base-partial/atoms/_nav.scss
+++ b/wp-content/themes/twentytwenty/css/base-partial/atoms/_nav.scss
@@ -37,7 +37,7 @@
                 line-height: 24px;
                 letter-spacing: 0em;
                 color:$green-col;
-                font-family: 'Playfair Display', sans-serif;
+                font-family: 'Playfair Display Regular', sans-serif;
                 padding: 10px 15px;
                 @media only screen and (max-width: 1024px){
                     padding: 15px 20px;
