--- a/wp-content/themes/twentytwenty/css/base-partial/organisms/_footer.scss
+++ b/wp-content/themes/twentytwenty/css/base-partial/organisms/_footer.scss
@@ -204,7 +204,7 @@
             font-weight: 600;
             color:#0C4D43;
             margin-bottom: 30px;
-            font-family: 'Playfair Display', sans-serif;
+            font-family: 'Playfair Display Semibold', sans-serif;
             @media only screen and (max-width: 1024px) {
                 text-align: left;
                 padding: 0px 0px 10px;
