--- a/wp-content/themes/twentytwenty/css/base-partial/atoms/_typography.scss
+++ b/wp-content/themes/twentytwenty/css/base-partial/atoms/_typography.scss
@@ -2,12 +2,91 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&display=swap');
 // @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap');
+
+
+@font-face {
+    font-family: 'Inter Regular';
+    src: url('/fonts/Inter-Regular.woff2') format('woff2'),
+        url('/fonts/Inter-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Inter Light';
+    src: url('/fonts/Inter-Light.woff2') format('woff2'),
+        url('/fonts/Inter-Light.woff') format('woff');
+    font-weight: 300;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Inter Bold';
+    src: url('/fonts/Inter-Bold.woff2') format('woff2'),
+        url('/fonts/Inter-Bold.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Inter Medium';
+    src: url('/fonts/Inter-Medium.woff2') format('woff2'),
+        url('/fonts/Inter-Medium.woff') format('woff');
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Playfair Display Bold';
+    src: url('/fonts/PlayfairDisplay-Bold.woff2') format('woff2'),
+        url('/fonts/PlayfairDisplay-Bold.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Playfair Display Regular';
+    src: url('/fonts/PlayfairDisplay-Regular.woff2') format('woff2'),
+        url('/fonts/PlayfairDisplay-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Playfair Display Semibold';
+    src: url('/fonts/PlayfairDisplay-SemiBold.woff2') format('woff2'),
+        url('/fonts/PlayfairDisplay-SemiBold.woff') format('woff');
+    font-weight: 600;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Playfair Display Medium';
+    src: url('/fonts/PlayfairDisplay-Medium.woff2') format('woff2'),
+        url('/fonts/PlayfairDisplay-Medium.woff') format('woff');
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+}
+
+
+
+
+
+
 html, body {
     height: 100%;
 }
 
 body{
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter Regular', sans-serif;
     font-weight: 400;
     font-size: 14px;
     color: $grey-col;
@@ -20,7 +99,7 @@ body{
 
 //Headings 
 h1 {
-    font-family: 'Playfair Display', sans-serif;
+    font-family: 'Playfair Display Semibold', sans-serif;
     font-weight: 600;
     font-size: 42px;
     line-height: 56px;
@@ -41,7 +120,7 @@ h1 {
     }
 }
 h2 { 
-    font-family: 'Playfair Display', sans-serif;
+    font-family: 'Playfair Display Semibold', sans-serif;
     font-weight: 600;
     font-size: 27px;
     line-height: 37px;
@@ -55,7 +134,7 @@ h2 {
     }
 }
 h3 { 
-    font-family: 'Playfair Display', sans-serif;
+    font-family: 'Playfair Display Regular', sans-serif;
     font-weight: 400;
     font-size: 24px;
     color: #333333;
