--- a/wp-content/themes/twentytwenty/css/base.css
+++ b/wp-content/themes/twentytwenty/css/base.css
@@ -553,11 +553,59 @@ html {
   width: 83.3333%; }
 
 /* @end */
+@font-face {
+  font-family: 'Inter Regular';
+  src: url("/fonts/Inter-Regular.woff2") format("woff2"), url("/fonts/Inter-Regular.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap; }
+@font-face {
+  font-family: 'Inter Light';
+  src: url("/fonts/Inter-Light.woff2") format("woff2"), url("/fonts/Inter-Light.woff") format("woff");
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap; }
+@font-face {
+  font-family: 'Inter Bold';
+  src: url("/fonts/Inter-Bold.woff2") format("woff2"), url("/fonts/Inter-Bold.woff") format("woff");
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap; }
+@font-face {
+  font-family: 'Inter Medium';
+  src: url("/fonts/Inter-Medium.woff2") format("woff2"), url("/fonts/Inter-Medium.woff") format("woff");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap; }
+@font-face {
+  font-family: 'Playfair Display Bold';
+  src: url("/fonts/PlayfairDisplay-Bold.woff2") format("woff2"), url("/fonts/PlayfairDisplay-Bold.woff") format("woff");
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap; }
+@font-face {
+  font-family: 'Playfair Display Regular';
+  src: url("/fonts/PlayfairDisplay-Regular.woff2") format("woff2"), url("/fonts/PlayfairDisplay-Regular.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap; }
+@font-face {
+  font-family: 'Playfair Display Semibold';
+  src: url("/fonts/PlayfairDisplay-SemiBold.woff2") format("woff2"), url("/fonts/PlayfairDisplay-SemiBold.woff") format("woff");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap; }
+@font-face {
+  font-family: 'Playfair Display Medium';
+  src: url("/fonts/PlayfairDisplay-Medium.woff2") format("woff2"), url("/fonts/PlayfairDisplay-Medium.woff") format("woff");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap; }
 html, body {
   height: 100%; }
 
 body {
-  font-family: 'Inter', sans-serif;
+  font-family: 'Inter Regular', sans-serif;
   font-weight: 400;
   font-size: 14px;
   color: #838383;
@@ -568,7 +616,7 @@ body {
   background-color: #fff; }
 
 h1 {
-  font-family: 'Playfair Display', sans-serif;
+  font-family: 'Playfair Display Semibold', sans-serif;
   font-weight: 600;
   font-size: 42px;
   line-height: 56px;
@@ -586,7 +634,7 @@ h1 {
         line-height: 24px; } }
 
 h2 {
-  font-family: 'Playfair Display', sans-serif;
+  font-family: 'Playfair Display Semibold', sans-serif;
   font-weight: 600;
   font-size: 27px;
   line-height: 37px;
@@ -599,7 +647,7 @@ h2 {
       margin-bottom: 15px; } }
 
 h3 {
-  font-family: 'Playfair Display', sans-serif;
+  font-family: 'Playfair Display Regular', sans-serif;
   font-weight: 400;
   font-size: 24px;
   color: #333333;
@@ -1151,7 +1199,7 @@ small {
     line-height: 24px;
     letter-spacing: 0em;
     color: #0C4D43;
-    font-family: 'Playfair Display', sans-serif;
+    font-family: 'Playfair Display Regular', sans-serif;
     padding: 10px 15px; }
     @media only screen and (max-width: 1024px) {
       .header nav li a {
@@ -1973,7 +2021,7 @@ small {
   font-weight: 600;
   color: #0C4D43;
   margin-bottom: 30px;
-  font-family: 'Playfair Display', sans-serif; }
+  font-family: 'Playfair Display Semibold', sans-serif; }
   @media only screen and (max-width: 1024px) {
     .footer .footer-box h4.link-head {
       text-align: left;
@@ -2269,13 +2317,13 @@ body.popup-open {
   position: relative; }
   .intro-col .intro-content p {
     text-align: center;
-    font: 400 24px/36px 'Playfair Display', sans-serif;
+    font: 400 24px/36px 'Playfair Display Regular', sans-serif;
     letter-spacing: 0.36px;
     color: #0C4D43;
     opacity: 1; }
     @media only screen and (max-width: 1024px) {
       .intro-col .intro-content p {
-        font: 400 18px/24px 'Playfair Display', sans-serif; } }
+        font: 400 18px/24px 'Playfair Display Regular', sans-serif; } }
 
 .sec-info {
   padding: 40px 40px 40px 0; }
