--- a/wp-content/themes/twentytwenty/css/base-partial/atoms/_nav.scss
+++ b/wp-content/themes/twentytwenty/css/base-partial/atoms/_nav.scss
@@ -204,6 +204,7 @@
         a{
             font-size: 12px;
             font-weight: 700;
+            font-family: 'Inter Bold', sans-serif;
             line-height: 12px;
             letter-spacing: 0em;
             color:#847367;
